4.3.3
-----
1. When showing no-playing context menu reset favIcon and favUrl so that these
   are updated from current track.
2. Only show ratings actions if configured to show ratings.

4.3.2
-----
1. Revert back to '1' for enabled bool server side items.
2. If jumplist only contains headers (e.g. as in 'New Music') then show if
   there are at least 5 times the number of items as there are jumplist
   entries.
3. Fix queue backdrop if desktop layout, pinned, and not using background
   images.
4. Trap contextmenu event in longpress handler, as opposed to using an empty
   handler.
5. Fix erroneously splitting of genre string.
6. Fix 'Live'/'Bootleg' release type option.
7. Only group all releases by type if LMS's 'groupArtistAlbumsByReleaseType'
   setting is set to 2
8. Add icon for ZenRadio.
9. Add 'tidal' and 'pyrrha' to emblems/track-sources.

4.3.1
-----
1. Fix view height issues when rotating.
2. Fix closing of 'Add to playlist' dialog.

4.3.0
-----
 1. Add option to move dialogs closer to click/touch position.
 2. If using unpinned queue without background image then have a
    semi-transparent background that blurs items below.
 3. Remove MySqueezebox.com related code, as service is shutdown.
 4. Add option to auto-close unpinned queue after 30 seconds.
 5. Change order of add/play buttons to be '(+) (>)'
 6. If play shuffled option is enabled, then show play shuffle icon in detailed
    sub-toolbar (if space) and when hovering.
 7. Add 'Play next' action to detailed sub-toolbar (if space, and play shuffle
    disabled) and when hovering.
 8. In MAI track details always show composer, conductor, band if tags exist,
    regardless of whether these are used for now-playing, etc. or not.
 9. Alter ratio for when now-playing landscape is treated as 'wide'.
10. For landscape now-playing always place cover on left, and have details
    fill remaining space - even if controls span view.