@@ -3,6 +3,7 @@
 1. When showing no-playing context menu reset favIcon and favUrl so that these
    are updated from current track.
 2. Only show ratings actions if configured to show ratings.
+3. Fix requesting extid (for emblems) and ratings in browse commands.
 
 4.3.2
 -----
